# lAgerPhi

./: .gitignore  .gitlab-ci.yml  CLAS1210GeV.ep-phi.gen.json  CMakeLists.txt  JPsi.C  README.md  README_gen.md  clean_lund.cc  cr-header.txt  deploy-old.py  deploy.py  install.py  install.sh  lundANA.cpp  pentaquark.C  run_lund.sh  run_lund_large.sh
.container/: bashrc  entrypoint.sh  lager-env.sh  lager-info  lager-shell  lager.Dockerfile
.container/profile.d/: a00_cleanup.sh  z11_lager_env.sh
.container/spack/: .gitignore  README.md  repo.yaml  spack.yaml
.gitlabci/: build.sh  cleanup_registry.sh  docker_login.sh  docker_push.sh  setup.sh
Analysis/: analyze_EIC_gen_lager.py  analyze_gen_lager.py  analyze_lager.py  batch_analyze_lager.py  bkgd_analyze_lager.py  bkgd_excl_analyze_lager.py  compute_gammap_xsec.py  new_tree_test.py  tree_batch_analyze_lager.py
cmake/: FindROOT.cmake  compiler.cmake  debug.cmake  disabled-FindROOT.cmake  lager-config-version.cmake.in  lager-config.cmake.in  liege-config-version.cmake.in  liege-config.cmake.in  options.cmake  pcsim-config-version.cmake.in  pcsim-config.cmake.in  rpath.cmake
containers/: deploy.py
containers/docker/: Dockerfile  Makefile  config.env  name.sh  registry.sh  usage.sh  version.sh
containers/singularity/: Singularity  Singularity.broadwell  \  lager.def  liege.def
containers/slurm/: info_script.sh  pcsim.sh  run_singularity.sh
deploy/: __init__.py  launcher.py  modulefile.py  util.py
examples/: bs-jpac_pomeron.json  config_gen.py  ehe4_jpsi.json  eic.upsilon-10on100.4pi.disp-ups-97-muon.json  eic.upsilon-10on100.4pi.disp-ups-97-muon.run00001-lumi10.000000.json  run.sh  run_pcsim.sh  solid.bs-2gluon.composite.json  solid.bs-2gluon.json  solid.ep-2gluon.composite.run00001-lumi1000.json  solid.ep-2gluon.composite.run00001-lumi1000.root  solid.ep-2gluon.json  upsilon-ep-e10p100.json
examples/4pi/: 4pi.ep-phi.json
examples/eic/: README.md
examples/jlab/: bs-2gluon.json  bs-jpac_pc4312.json  bs-jpac_pc4440+4457.json
examples/scripts/: check_particles.py  root_to_csv.py
examples/solid/: solid-box.bs-holographic.json  solid-box.ep-holographic.json  solid.bs-2gluon.json  solid.ep-2gluon.json  solid.ep-phi.json
jupyter/: CMakeLists.txt  dashboard.ipynb  pcsim-jupyter.in  rootlogon.C.in
jupyter/pcsim/: __init__.py  dashboard.py  physics.hh  setup_root.py.in  vm.cc  vm.py
jupyter/pcsim/dataframe/: __init__.py  dataframe.cc  dataframe.hh  dataframe.py  pcsim_vm.cc  pcsim_vm.py  pcsim_vm_cc.d  vm.hh
jupyter/pcsim/plot/: __init__.py  binning.py  dummy_frame.py  mock_data.py
jupyter/pcsim/util/: __init__.py  path.py.in  setup_root.cc  setup_root.cc.in  setup_root.py.in  tf1_wrap.py
jupyter/pcsim/vm/: __init__.py  dashboard.py  physics.hh  physics.py  vm.cc  vm.py
liege/core/: CMakeLists.txt  assert.hh  configuration.cc  configuration.hh  event.cc  event.hh  exception.hh  factory.hh  framework.cc  framework.hh  generator.hh  histogrammer.hh  interval.hh  logger.cc  logger.hh  particle.hh  pdg.cc  pdg.hh  progress_meter.hh  spline.hh  stringify.hh  type_traits.hh  version.hh.in
liege/physics/: CMakeLists.txt  constants.hh  decay.cc  decay.hh  kinematics.hh  photon.hh  vm.hh
liege/proc/: CMakeLists.txt
pcsim/core/: CMakeLists.txt  accept_reject.hh  assert.hh  configuration.cc  configuration.hh  decay.hh  detector.cc  detector.hh  event.cc  event.hh  event_out.cc  event_out.hh  exception.hh  factory.hh  framework.cc  framework.hh  generator.hh  histogrammer.hh  interval.hh  logger.cc  logger.hh  particle.hh  pdg.cc  pdg.hh  progress_meter.hh  random.hh  spline.hh  stringify.hh  type_traits.hh  version.hh.in
pcsim/physics/: CMakeLists.txt  bremsstrahlung.cc  bremsstrahlung.hh  decay.cc  (+14 more)
pcsim/proc/: CMakeLists.txt
pcsim/proc/decay/: decay.hh  lp_gamma.cc  lp_gamma.hh
pcsim/proc/detector/: barrel.cc  barrel.hh  composite.cc  composite.hh  detector.cc  detector.hh  jleic.cc  jleic.hh  n_spectro.cc  null.cc  null.hh  solid.cc  solid.hh  spectrometer.cc  spectrometer.hh
pcsim/proc/detector/eic-fastmc/: acceptance.h  eic_fastmc.h  eic_fastmc_lund.C  pidentification.h  readLund.h  readme  resolution.h  test_all.C
pcsim/proc/detector/eic-fastmc/acceptance_files/: acceptance_det1_hybrid_neutron_100GeV_central_output_final.root  acceptance_det1_hybrid_neutron_100GeV_iondownstream_output_final.root  acceptance_det1_hybrid_neutron_5GeV_eledownstream_output_final.root  acceptance_det1_hybrid_solenoidoff_electron_5GeV_eledownstream_output_final.root  acceptance_det1_hybrid_solenoidoff_proton_100GeV_iondownstream_output_final.root  acceptance_det1_hybrid_solenoidon_electron_5GeV_eledownstream_output_final.root  acceptance_det1_hybrid_solenoidon_proton_100GeV_iondownstream_output_final.root
pcsim/proc/reconstruction/: '  lp_gamma.cc  lp_gamma.hh  reconstruction.hh
pcsim/root/: CMakeLists.txt  config.hh.in  pcsim-root.in  setup_root.cc.in  test.py
pcsim/root/dataframe/: anl.hh  dataframe.cc  dataframe.hh  histogrammer.cc  histogrammer.hh  lp_gamma.hh
pcsim/root/physics/: physics.hh  vm.cc  vm.hh
program/: CMakeLists.txt  example-config.json  liege.cc  pcsim-lp-gamma.cc  pcsim-lp_gamma.cc  pcsim-upsilon.cc  pcsim-vm.cc  pcsim.cc
program/config-examples/: jpsi-acc-smear.json  jpsi-acc.json  jpsi-bs.json  jpsi-ep-e5p100.json  jpsi-ep.json  jpsi-flat-hera.json  jpsi-flat.json  jpsi-gen.json  jpsi-solid.json  pc-acc-smear.json  pc-acc.json  pc-flat.json  pc-gen.json  pc-solid.json  solid-photo.json  upsilon-ep-e5p100.json  upsilon-flat-hera.json
python/: CMakeLists.txt  pcsim-ipython.in  pcsim-jupyter.in  pcsim-python.in
python/pcsim/: __init__.py
python/pcsim/dashboard/: __init__.py  vm.py
python/pcsim/dataframe/: anl_vm.cc.disabled  anl_vm.py.disabled  dataframe.py
python/pcsim/physics/: __init__.py  physics.py  vm.py
python/pcsim/plot/: __init__.py  binning.py  dummy_frame.py  fix.py  mock_data.py  wd_graph.py
python/pcsim/util/: __init__.py  classdict.py  path.py.in  setup_root.py.in  tf1_wrap.py
scripts/: debug_xsec.C  theta_lepton.C
src/program/: CMakeLists.txt  lager.cc
(+108 files in other folders)
